# trading-bot-gpt

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: 02_trading_bot_fake_context.py  backfill_technical_indicators.py  config.py  logger.py  technical_indicators_pipeline.py
src/old/: 01_basic_llm_chain.py  02_trading_bot_fake_context.py
